--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,8 @@
     <title>Pure Ruby Website</title>
 </head>
 <body>
-    <h1>Welcome to my <span style="color: #a40000;">RUBY</span> website!</h1>
+    <h1 title="Page Title">Welcome to my <span style="color: #a40000;">RUBY</span> website!</h1>
+    <br>
+    <a href="https://google.com" title="Google Search Engine" target="_blank" style="text-decoration-line: none;">Open Google</a>
 </body>
 </html>
