--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1 title="Page Title">Welcome to my <span style="color: #a40000;">RUBY</span> website!</h1>
     <br>
-    <a href="https://google.com" title="Google Search Engine" target="_blank" style="text-decoration-line: none;">Open Google</a>
+    <a href="https://google.com" title="Google Search Engine" target="_blank">Open Google</a>
 </body>
 </html>
