--- a/views/about.html
+++ b/views/about.html
@@ -9,7 +9,7 @@
 <body>
     <h1 title="Page Title">This is <span style="color: #009924;">ABOUT</span> page!</h1>
     <br>
-    <a href="../views/index.html" title="Go to Home page" target="_blank">Home</a>
+    <a href="../views/index.html" title="Go to Home page">Home</a>
     <script src="../public/scripts/main.js"></script>
 </body>
 </html>
