--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,8 @@
     <h1 title="Page Title">Welcome to my <span style="color: #a40000;">RUBY</span> website!</h1>
     <br>
     <a href="https://google.com" title="Google Search Engine" target="_blank">Open Google</a>
+    <br>
+    <a href="../views/about.html" title="Go to About page">About page</a>
     <script src="../public/scripts/main.js"></script>
 </body>
 </html>
