--- a/views/about.html
+++ b/views/about.html
@@ -10,6 +10,8 @@
     <h1 title="Page Title">This is <span style="color: #009924;">ABOUT</span> page!</h1>
     <br>
     <a href="../views/index.html" title="Go to Home page">Home</a>
+    <hr>
+    <img src="../public/images/kimonotocat.png" alt="kimonotocat" width="70%">
     <script src="../public/scripts/main.js"></script>
 </body>
 </html>
