--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,8 @@
     <a href="https://google.com" title="Google Search Engine" target="_blank">Open Google</a>
     <br>
     <a href="../views/about.html" title="Go to About page">About page</a>
+    <br>
+    <a href="../views/">contact</a>
     <script src="../public/scripts/main.js"></script>
 </body>
 </html>
