--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
     <br>
     <a href="../views/about.html" title="Go to About page">About page</a>
     <br>
-    <a href="../views/">contact</a>
+    <a href="../views/">contact us</a>
     <script src="../public/scripts/main.js"></script>
 </body>
 </html>
