--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../public/stylesheets/main.css">
 </head>
 <body>
-    <h1 title="Page Title">Welcome to my <span style="color: #a40000;">RUBY</span> website!</h1>
+    <h1 title="Page Title">Welcome to my <span style="color: #900000;">RUBY</span> website!</h1>
     <br>
     <a href="https://google.com" title="Google Search Engine" target="_blank">Open Google</a>
     <br>
