--- a/views/about.html
+++ b/views/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../public/stylesheets/main.css">
 </head>
 <body>
-    <h1 title="Page Title">This is <span style="color: #009924;">ABOUT</span> page!</h1>
+    <h1 title="Page Title">This is <span style="color: #039c27;">ABOUT</span> page!</h1>
     <br>
     <a href="/" title="Go to Home page">Home</a>
     <hr>
